@startuml

title __MODEL's Class Diagram__\n


    namespace odel {
      interface model.ChristmasTree {
          {abstract} + draw()
      }
    }

  


    namespace odel {
      class model.ChristmasTreeImpl {
          + draw()
      }
    }

  


    namespace odel {
      class model.Girland {
          + circle : Circle[]
          + Girland()
          + draw()
          - drawWithGirland()
      }
    }

  


    namespace odel {
      class model.Presents {
          + Presents()
          + draw()
          - drawWithPresents()
      }
    }

  


    namespace odel {
      class model.Star {
          + Star()
          + draw()
          - drawStar()
      }
    }

  


    namespace odel {
      abstract class model.TreeDecorator {
          + TreeDecorator()
          + draw()
      }
    }

  

  model.ChristmasTreeImpl .up.|> model.ChristmasTree
  model.Girland -up-|> model.TreeDecorator
  model.Presents -up-|> model.TreeDecorator
  model.Star -up-|> model.TreeDecorator
  model.TreeDecorator .up.|> model.ChristmasTree
  model.TreeDecorator o-- model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
